RESOLVED FIXED165152
[CSS Parser] Fix ::cue parsing
https://bugs.webkit.org/show_bug.cgi?id=165152
Summary [CSS Parser] Fix ::cue parsing
Dave Hyatt
Reported 2016-11-29 12:34:38 PST
[CSS Parser] Fix ::cue parsing
Attachments
Patch (5.09 KB, patch)
2016-11-29 12:36 PST, Dave Hyatt
zalan: review+
Dave Hyatt
Comment 1 2016-11-29 12:36:46 PST
Dave Hyatt
Comment 2 2016-11-29 13:04:34 PST
Landed in r209085.
Note You need to log in before you can comment on or make changes to this bug.