[CSS Parser] Fix ::cue parsing https://bugs.webkit.org/show_bug.cgi?id=165152

Reviewed by Zalan Bujtas.

* css/parser/CSSParserValues.h:
(WebCore::CSSParserSelector::setPseudoElementType):
* css/parser/CSSSelectorParser.cpp:
(WebCore::isOnlyPseudoClassFunction):
(WebCore::isOnlyPseudoElementFunction):
(WebCore::CSSSelectorParser::consumePseudo):
(WebCore::isPseudoClassFunction): Deleted.
(WebCore::isPseudoElementFunction): Deleted.



Canonical link: https://commits.webkit.org/182775@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209085 268f45cc-cd09-0410-ab3c-d52691b4dbfc